In this second commit, changes to the layout were made, putting the search bar end the editing mode container inside a nav bar and align them correctly using Flexbox. We also added a media query to improve experience on mobile devices.

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,3 +1,4 @@
+/* General styles */
 h1{
   color:#0e124d;
 }
@@ -11,13 +12,16 @@ h2{
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 700;
 }
+
+ul{padding-left:0px!important;}
+li{list-style: none;}
+
 /* styles for the menu section */
-
-
 .menu {
   display: flex;
   flex-direction: column;
-  width: 250px; /* change this value to the collapsed width */
+  flex-basis: 250px;
+  flex-grow: 0;
   align-items: center;
   position: fixed;
   top: 0;
@@ -26,10 +30,16 @@ h2{
   background-color: #1fffbc;
   transition: width 0.3s ease;
   overflow: auto;
+  padding: 0.5rem;
 }
 
 .menu.collapsed {
-  width: 80px;
+  flex-basis: 80px;
+  transition: flex-basis 0.3s ease;
+}
+
+.menu.collapsed ~ .main-content {
+  transition: margin-left 0.3s ease;
 }
 
 .menu.collapsed .lessons {
@@ -42,7 +52,7 @@ h2{
 
 .menu-hamburger {
   font-size: 24px;
-  padding: 10px;
+  padding: 0.5rem;
   cursor: pointer;
 }
 
@@ -52,13 +62,10 @@ h2{
   padding: 10px 0;
 }
 
-li{list-style: none;}
 li.lesson:hover{background-color: #fff;border-radius: 5px;}
 
-ul{padding-left:0px!important;}
-
 .delete-lesson {
-  margin-left:8px;
+  margin-left:0.5rem;
   cursor: pointer;
 }
 
@@ -68,34 +75,34 @@ transform: scale(1.2);
   
  /* styles for the main content section */
  .main-content {
+  flex: 1;
+  padding: 1rem;
+  overflow-y: auto;
+  transition: margin-left 0.3s ease;
+  margin-left: 4.5rem;
+}
+  
+  .navigation-bar{
     display: flex;
-    flex-direction: column;
-    align-items:normal;
-    padding-left: 60px; /* width of the collapsed menu */
-    padding-top: 20px;
+    justify-content:space-evenly;
+    
   }
-  
-  .edit-mode-toggle {
-    margin-bottom: 10px;
+
+  .search-bar-container {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
   }
-  
+
   .search-bar {
     margin: 8px;
   }
-
-  .search-and-add-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-  }
   
-.toggle-container {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    margin:auto;
-    }
+    .toggle-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+     }
   
   .fa-toggle-off{
     cursor: pointer;
@@ -106,13 +113,19 @@ transform: scale(1.2);
   }
 
   #edit-tag{
-    margin-right: 4px;
-    font-size:x-small;
+    margin-right: 3px;
+    font-size:0.5rem;
   }
 
+  @media screen and (max-width: 767px) {
+    #edit-tag {
+      display: none;
+    }
+  }
+ 
   .add-lesson {
-    margin-left: 10px;
-    margin-right: 20px;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     border-color: #f1f1f1;
     cursor: pointer;
   }
@@ -230,26 +243,10 @@ transform: scale(1.2);
   font-weight: 700;
 }
 
-
-
- /* flexbox styles for the app */ 
- .App {
+.app-body {
   display: flex;
-  height: 100vh;
-  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
-.app-body {
-  display: flex;
-  flex-grow: 1;
-  height: 100%;
-}
-
-.main-content {
-  flex-grow: 1;
-  padding: 20px;
-  overflow-y: auto;
-  margin-left:6rem;
-}
 
